Add 'add-opens' argument to README